# ruchyruchy

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pmat.toml  .pmat_monitor.sh  .pmatignore  .tdg_baseline.json  404.html  BOOK_STATUS.md  BOOTSTRAP_COMPLETE.md  BOOTSTRAP_FIXED.md  BOUNDARIES.md  BUG_AND_TOOLING_ANALYSIS.md  BUG_DISCOVERY_REPORT.md  BUG_REPORT_FILE_OPEN_TYPE_MARKER.md  CHANGELOG.md  CLAUDE.md  COMPILER_PLAN.md  CONTRIBUTING.md  CONTRIBUTING_TO_RUCHY.md  COVERAGE_REPORT.md  CRATES_IO_VERIFICATION.md  Cargo.toml  DEBUGGER_SPECIFICATION.md  DEBUGGING_GUIDE.md  DEBUGGING_TOOLS_SESSION_SUMMARY.md  EDUCATIONAL_QUALITY_REPORT.md  FILING_GITHUB_ISSUE_INSTRUCTIONS.md  FINAL_SESSION_REPORT.md  GITHUB_ISSUE_EARLY_RETURN_BUG.md  GITHUB_ISSUE_HELP_COMMANDS.md  GITHUB_ISSUE_VARIABLE_COLLISION.md  GITHUB_ISSUE_box_enum_match.md  GITHUB_ISSUE_box_vec_support.md  GITHUB_ISSUE_enum_tuple_pattern_matching.md  GITHUB_ISSUE_loop_mut_tuple_return.md  GITHUB_ISSUE_string_nth_method.md  GITHUB_RELEASE_v1.1.0.md  INFRA-002-COMPLETE.md  INFRA-003-COMPLETE.md  (+139 more)
.cargo/: config.toml
.github/: pull_request_template.md
.pmat/: baseline.json  context.db  deps-cache.json  generate_quality_report.sh  project.toml  tdg-baseline.json  tdg-rules.toml  test_bootstrap_stages.sh  test_validation_quality.sh
benches/: benchmarks.rs
book/: book.toml
book/book/: CNAME  (+8 more)
contracts/: sampling-v1.yaml  tokenize-v1.yaml
coverage/: tarpaulin-report.html
debugging/: chapter.html  debug-001-source-maps-green.html  debug-001-source-maps-red.html  debug-008-record-replay-green.html  debug-008-record-replay-red.html  debug-integration-success.html
discoveries/: boundaries.html  runtime-enhancements.html
discovery/: cicd_integration.ruchy  coverage_guided.ruchy  differential_testing.ruchy  documentation_user_guide.ruchy  final_integration_testing.ruchy  framework_simple.ruchy  fuzzing.ruchy  metamorphic_testing.ruchy  mutation_testing.ruchy  performance_optimization.ruchy  performance_profiling.ruchy  property_testing.ruchy  real_world_injection.ruchy  ruchydbg_auto_detect.ruchy  ruchydbg_perf_viz.ruchy  system_closure_retrospective.ruchy  yaml_report_generation.ruchy
docs/: EDUCATION-001-IMPLEMENTATION-PLAN.md  GITHUB-ISSUE-profiler.md  GITHUB_ISSUES_TO_FILE.md  GITHUB_ISSUE_RUCHY_FMT_DATA_LOSS.md  GITHUB_ISSUE_RUCHY_PARSER_BUG.md  MISSING_QUALITY_TOOLS_ANALYSIS.md  MUTATION_TESTING.md  MUTFUZZ_TOOL_DESIGN.md  PERFORMANCE_INSIGHTS_JULIA_JIT.md  PERF_001A_RUNTIME_ANALYSIS.md  PRODUCTION-FEATURE-REQUEST-profiler.md  QUALITY-001_PROGRESS.md  QUALITY-001_TOOL_VALIDATION.md  QUALITY-002_TOOL_VALIDATION.md  RUCHY_FMT_BUG_REPORT.md  SESSION_SUMMARY_CONTINUATION.md  SPEC-001-REVIEW-SUMMARY.md  TRUNK-V3.194.0-VERIFICATION.md  feedback_system.html
examples/: benchmark_profiler_overhead.rs  integration_demo.rs  integration_demo.rs.disabled  jit_benchmark_demo.rs  manual_instrumentation_demo.rs  test_rewind_debug.rs  type_aware_tracing_demo.ruchy
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_evaluator.rs  fuzz_lexer.rs  fuzz_parser.rs
phase1_infrastructure/: chapter.html
phase2_validation/: chapter.html
phase3_bootstrap/: chapter.html
phase4_debugger/: debugger-001-dap-server-skeleton.html  debugger-002-breakpoint-management.html  debugger-003-execution-control.html  debugger-004-parse-stack-inspection.html  debugger-005-ast-visualization.html  debugger-006-parse-tree-diff.html  debugger-007-execution-recording.html  debugger-008-time-travel-navigation.html  debugger-009-deterministic-replay.html  debugger-010-type-error-visualization.html  debugger-011-scope-inspector.html  debugger-012-call-stack-visualization.html  debugger-041-stack-profiler.html  debugger-042-pathological-detector.html  debugger-043-regression-hang-detector.html  debugger-044-property-based-testing.html  debugger-045-mutation-testing.html  debugger-046-repl-debugger.html  debugger-047-performance-profiler.html  debugger-050-parser-token-inspection.html  debugger-052-jit-debug.html  debugger-053-differential.html  debugger-054-quality-gates.html  debugger-055-interactive-rust-gdb.html  interactive-debugging-guide.html
phase5_interpreter/: interp-029-fuzzing.html  interp-030-benchmarking.html  interp-031-memory-safety.html  interp-033-bug-taxonomy.html  interp-099-integration.html  quality-001-meta-tests.html
phase6_compiled_instrumentation/: compiled-inst-001-ast-instrumentation.html  compiled-inst-002-perf-event-integration.html  compiled-inst-003-binary-analysis.html
ruchyruchy-ebpf/: Cargo.toml
ruchyruchy-ebpf/.cargo/: config.toml
ruchyruchy-ebpf/src/: syscall_tracer.rs
scripts/: capture-golden-traces.sh  commit-msg  debug-ruchy-auto.sh  debug-ruchy.sh  generate-book-chapters.sh  install-hooks.sh  pre-commit  quality-gates.sh  record-metric.sh  reproduce-compiled-inst-001.sh  reproduce-compiled-inst-002.sh  reproduce-compiled-inst-003.sh  run-ebpf-tests.sh  run-extreme-testing-on-bootstrap.sh  tdd-harness.ruchy  test-all-bootstrap-files.sh  validate-benchmark-001.sh  validate-book.sh  validate-coverage-001.sh  validate-coverage-002.sh  validate-debugging-001.sh  validate-debugging-002.sh  validate-debugging-003.sh  validate-debugging-tools.sh  validate-differential-001.sh  validate-discovery-001.sh  validate-discovery-002.sh  validate-discovery-003.sh  validate-discovery-004.sh  validate-discovery-005.sh  validate-discovery-006.sh  validate-discovery-007.sh  validate-discovery-008.sh  validate-discovery-009.sh  validate-discovery-010.sh  validate-discovery-011.sh  validate-discovery-012.sh  validate-discovery-013.sh  validate-discovery-014.sh  validate-discovery-015.sh  (+24 more)
src/: bootstrap_fixpoint_test.rs  bootstrap_pipeline.rs  bootstrap_showcase.rs  complete_bootstrap_demo.rs  lib.rs  performance_benchmark.rs  stage3_real_codegen.rs
templates/: tutorial_template.html  tutorial_template.md
tests/: codegen_test_suite.rs  property_based_tests.rs  test_arc_debug.rs  test_arc_multi.rs  test_bug_055_runaway_property_tests.rs  test_bug_filing_001.rs  test_compile_001_module.rs  test_compiled_inst_001_ast_hooks.rs  (+112 more)
(+942 files in other folders)
