[package]
name = "ruchyruchy"
version = "1.7.0"
edition = "2021"
authors = ["RuchyRuchy Development Team"]
description = "Bug Discovery + Zero-Cost Compiler Tracing Research - 10 quality tools, automated bug detection (differential, property, fuzz), compiler instrumentation infrastructure for Ruchy --trace flag, 95%+ detection rate, 280+ tests - EXTREME TDD, research infrastructure for paiml/ruchy compiler"
repository = "https://github.com/paiml/ruchyruchy"
license = "MIT"
keywords = ["bug-discovery", "testing", "quality", "static-analysis", "github"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
include = [
    "src/**/*",
    "docs/**/*.md",
    "validation/**/*.ruchy",
    "validation/**/*.yaml",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "INTEGRATION.md",
    "QUALITY_IMPACT_ANALYSIS.md",
    "QUICK_START_FOR_RUCHY_DEVS.md",
]

[lib]
name = "ruchyruchy"
path = "src/lib.rs"

[[bin]]
name = "ruchydbg"
path = "src/bin/ruchydbg.rs"

[dependencies]
# Currently minimal - add dependencies as needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# eBPF userspace dependencies (DEBUGGER-015)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

# Statistical profiling dependencies (DEBUGGER-016)
perf-event = { version = "0.4", optional = true }
perf-event-data = { version = "0.1", optional = true }

[dev-dependencies]
# Test dependencies

[features]
default = ["optimizations"]
# Feature flags for optional functionality
bootstrap = []
optimizations = []  # Performance optimizations enabled by default
debugging = []
ebpf = ["aya", "aya-log"]  # eBPF syscall tracing (DEBUGGER-015)
profiling = ["perf-event", "perf-event-data"]  # Statistical profiling (DEBUGGER-016)

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
