[package]
name = "ruchyruchy"
version = "1.27.0"
edition = "2021"
authors = ["RuchyRuchy Development Team"]
description = "JIT Compiler + Advanced Debugging Tools - Cranelift-based JIT with mixed-mode execution, eBPF syscall tracing, statistical profiling, 10 quality tools, automated bug detection, 95%+ detection rate, 750+ tests - EXTREME TDD, research infrastructure for paiml/ruchy compiler"
repository = "https://github.com/paiml/ruchyruchy"
license = "MIT"
keywords = ["bug-discovery", "testing", "quality", "static-analysis", "github"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
include = [
    "src/**/*",
    "docs/**/*.md",
    "validation/**/*.ruchy",
    "validation/**/*.yaml",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "INTEGRATION.md",
    "QUALITY_IMPACT_ANALYSIS.md",
    "QUICK_START_FOR_RUCHY_DEVS.md",
]

[lib]
name = "ruchyruchy"
path = "src/lib.rs"

[[bin]]
name = "ruchydbg"
path = "src/bin/ruchydbg.rs"

[[bin]]
name = "ruchy"
path = "src/bin/ruchy.rs"

[dependencies]
# Currently minimal - add dependencies as needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# JIT compilation dependencies (JIT-001)
cranelift = "0.109"
cranelift-jit = "0.109"
cranelift-module = "0.109"
cranelift-frontend = "0.109"
target-lexicon = "0.12"  # Required for ISA triple information

# eBPF userspace dependencies (DEBUGGER-015)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

# Statistical profiling dependencies (DEBUGGER-016)
perf-event-open = { version = "0.4", optional = true }

# Binary analysis dependencies (COMPILED-INST-003)
goblin = "0.8"

[dev-dependencies]
# Test dependencies
serde_yaml = "0.9"
# Property-based testing (DEBUGGER-044)
proptest = "1.4"

[features]
default = ["optimizations"]
# Feature flags for optional functionality
bootstrap = []
optimizations = []  # Performance optimizations enabled by default
debugging = []
ebpf = ["aya", "aya-log"]  # eBPF syscall tracing (DEBUGGER-015)
profiling = ["perf-event-open"]  # Statistical profiling (DEBUGGER-016)

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
