[package]
name = "ruchyruchy-ebpf"
version = "0.1.0"
edition = "2021"
authors = ["RuchyRuchy Development Team"]

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[bin]]
name = "syscall_tracer"
path = "src/syscall_tracer.rs"
